Ну чут чут регистрация

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,7 +15,9 @@
           <li><a href="/">Главная</a></li>
           <li><a href="/explore">Изучить</a></li>
           <li><a href="/messages">Мессенджер</a></li>
-          <li><a href="/profile">Профиль</a></li> 
+          <li><a href="/profile">Профиль</a></li>
+          <li><a href="/login">Войти</a></li>
+          <li><a href="/register">Регистрация</a></li> 
         </ul>
       </nav>
     </div>
