--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -16,6 +16,8 @@
           <li><a href="/explore">Изучить</a></li>
           <li><a href="/messages">Мессенджер</a></li>
           <li><a href="/profile">Профиль</a></li>
+          <li><a href="/login">Войти</a></li>
+          <li><a href="/register">Регистрация</a></li>
         </ul>
       </nav>
     </div>
