--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -15,9 +15,13 @@
           <li><a href="/">Главная</a></li>
           <li><a href="/explore">Изучить</a></li>
           <li><a href="/messages">Мессенджер</a></li>
-          <li><a href="/profile">Профиль</a></li>
-          <li><a href="/login">Войти</a></li>
-          <li><a href="/register">Регистрация</a></li>
+          <% if (!user) { %> <!-- Если пользователь не авторизован -->
+            <li><a href="/login">Войти</a></li>
+            <li><a href="/register">Регистрация</a></li>
+          <% } else { %> <!-- Если пользователь авторизован -->
+            <li><a href="/profile">Профиль</a></li>
+            <li><a href="/logout">Выйти</a></li>
+          <% } %>
         </ul>
       </nav>
     </div>
