--- a/public/styles.css
+++ b/public/styles.css
@@ -435,47 +435,53 @@ textarea {
     background-color: #e60039;
   }
   
+/* Сетка авторов на главной */
 
-  .authors-grid {
+.authors-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Автоматическое заполнение колонок */
-    gap: 20px; /* Отступы между карточками */
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
     margin-top: 30px;
-  }
-  
-  .author-card {
+}
+
+.author-card {
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 15px;
     text-align: center;
     transition: transform 0.3s ease;
-  }
-  
-  .author-card:hover {
-    transform: translateY(-10px); /* Эффект при наведении */
-  }
-  
-  .author-avatar {
+}
+
+.author-card:hover {
+    transform: translateY(-10px);
+}
+
+.author-avatar {
     width: 100px;
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 15px;
-  }
-  
-  .author-card h3 {
+}
+
+.author-card h3 {
     font-size: 18px;
     margin-bottom: 10px;
-  }
-  
-  .author-card p {
+}
+
+.author-card p {
     font-size: 14px;
     color: #666;
     margin-bottom: 15px;
-  }
-  
-  .author-card button {
+}
+
+.subscribe-form {
+    text-align: center; /* Центрирование формы подписки */
+    margin-top: 10px; /* Добавить отступ сверху */
+}
+
+.subscribe-form button {
     background-color: #007bff;
     color: white;
     padding: 10px 20px;
@@ -483,12 +489,15 @@ textarea {
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-  }
-  
-  .author-card button:hover {
+    width: 100%; /* Задайте ширину 100%, чтобы кнопка занимала всю ширину родительского элемента */
+}
+
+.subscribe-form button:hover {
     background-color: #0056b3;
-  }
-  
+}
+
+
+ 
   
   /* Адаптивность */
   @media (max-width: 768px) {
