--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -19,7 +19,7 @@
             <li><a href="/login">Войти</a></li>
             <li><a href="/register">Регистрация</a></li>
           <% } else { %> <!-- Если пользователь авторизован -->
-            <li><a href="/profile">Профиль</a></li>
+            <li><a href="/profile/<%= user.Id %>">Профиль</a></li>
             <li><a href="/logout">Выйти</a></li>
           <% } %>
         </ul>
